# safe-transaction-service

./: .coveragerc  .dockerignore  .env  .env.dev  .env.example  .env.l2.sample  .env.local  .env.test  .env.tracing.sample  .env_local  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CONTRIBUTING.md  CONTRIBUTORS.txt  Dockerfile.heroku  Docs.mdj  LICENSE  LICENSE_HEADER.txt  NOTICE.md  README.md  cloudbuild.yaml  docker-compose.dev.yml  docker-compose.yml  docker_instructions.txt  ethereum_network.py  gunicorn.conf.py  gunicorn_custom_workers.py  heroku.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.sh  safe_signature.py  setup.cfg  (+1 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/Arbeitsabläufe/: sicherer transation codeql.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cla.yml  codeql.yml  docker-build-push.yml  dockerize.yml  nowsecure.yml  python.yml  snyk-container.yml
charts/safe-transaction/: Chart.yaml  values.yaml
charts/safe-transaction-service/: README.md  values.yaml
config/: __init__.py  admin.py  celery_app.py  gunicorn.py  swagger.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  production_celery.py  test.py
docker/ganache/: Dockerfile
docker/nginx/: nginx.conf  safe_service.conf
docker/web/: Dockerfile  Dockerfile_alpine  run_web.sh
docs/: Makefile  conf.py  index.rst
external_network/: Dockerfile  addresses.py  ethereum_network.py
helm-chart/: Chart.yaml  README.md  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
safe_transaction_history/: version.py
safe_transaction_history/ether/: exceptions.py  signing.py  utils.py  web3_service.py
safe_transaction_history/history/: apps.py  models.py  redis_service.py  serializers.py  tasks.py  views.py
safe_transaction_history/safe/: admin.py  apps.py  contracts.py  ethereum_service.py  filters.py  models.py  safe_creation_tx.py  safe_service.py  serializers.py  tasks.py  urls.py  validators.py  views.py
safe_transaction_history/taskapp/: celery.py
safe_transaction_history/utils/: singleton.py
safe_transaction_service/: __init__.py  middlewares.py  version.py
safe_transaction_service/account_abstraction/: SafeOperation.py  UserOperationV7.py  admin.py  apps.py  constants.py  filters.py  helpers.py  models.py  pagination.py  serializers.py  urls.py  utils.py  views.py
safe_transaction_service/analytics/: apps.py  serializers.py  tasks.py  urls.py  urls_v2.py  views.py  views_v2.py
safe_transaction_service/contracts/: admin.py  apps.py  models.py  pagination.py  serializers.py  signals.py  sourcify.py  tasks.py  tx_decoder.py  urls.py  views.py
safe_transaction_service/events/: apps.py  tasks.py
safe_transaction_service/history/: admin.py  apps.py  cache.py  constants.py  filters.py  (+13 more)
scripts/: autodeploy.sh  benchmark_keccak.py  benchmark_node.py  build-and-push-helm-chart.sh  deploy_docker.sh  deploy_docker_github.sh
(+552 files in other folders)
