[project]
name = "safe-transaction-service"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "boto3==1.42.82",
    "cachetools==6.2.3",
    "celery[librabbitmq]==5.6.3",
    "django==5.2.12",
    "django-cache-memoize==0.2.1",
    "django-celery-beat==2.8.1",
    "django-cors-headers==4.9.0",
    "django-debug-toolbar",
    "django-debug-toolbar-force",
    "django-environ==0.13.0",
    "django-extensions==4.1",
    "django-filter==25.2",
    "django-imagekit==6.0.0",
    "django-model-utils==5.0.0",
    "django-redis==6.0.0",
    "django-s3-storage==0.15.0",
    "django-timezone-field==7.2.1",
    "djangorestframework==3.17.1",
    "djangorestframework-camel-case==1.4.2",
    "docutils==0.22.4",
    "drf-spectacular==0.29.0",
    "flower==2.0.1",
    "gunicorn[gevent]==25.3.0",
    "orjson==3.11.8",
    "packaging>=21.0",
    "pillow==12.1.1",
    "psycopg[binary,pool]==3.3.3",
    "redis[hiredis]==7.1.0",
    "requests==2.33.1",
    "safe-eth-py[django]==7.20.0",
    "web3==7.14.1",
]

[dependency-groups]
dev = [
    "coverage==7.13.1",
    "django-stubs==5.2.9",
    "django-test-migrations==1.5.0",
    "factory-boy==3.3.3",
    "faker==40.4.0",
    "ipdb",
    "ipython",
    "mypy==1.19.1",
    "pre-commit",
    "pytest==9.0.2",
    "pytest-celery==1.3.0",
    "pytest-django==4.12.0",
    "pytest-env==1.6.0",
    "pytest-rerunfailures==16.1",
    "pytest-sugar==1.1.1",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "safe_transaction_service/__init__.py"

[tool.uv]
# Reject packages published less than 7 days ago to avoid supply-chain attacks
exclude-newer = "7 days"
compile-bytecode = true

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
	".tox", ".git", "*/migrations/*", "*/static/CACHE/*",
	"docs", "node_modules", "venv"
]

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.ruff.lint.isort.sections]
django = ["django"]
gnosis = ["py_eth_sig_utils", "gnosis"]

[tool.ruff.lint.isort]
default-section = "third-party"
known-first-party = ["safe_transaction_service"]
section-order = [
  "future", "standard-library", "django",
  "third-party", "gnosis", "first-party", "local-folder"
]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = []

[tool.coverage.run]
include = ["safe_transaction_service/*"]
omit = [
    "*__init__.py*",
    "*/migrations/*",
	"test_*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  'if __name__ == "__main__":',
  "if settings.DEBUG",
  "^\\s*pass\\s*$",
]

[tool.pytest_env]
DJANGO_SETTINGS_MODULE = "config.settings.test"
DJANGO_DOT_ENV_FILE = ".env.test"
